--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react-dom": "^16.4.1",
     "react-scripts": "^2.1.1"
   },
-  "homepage": "https://billydevInGitHub/react-tutorial",
+  "homepage": "https://billydevingithub.github.io/react-tutorial/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
